After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664491 - compiler warnings on OS X 64bit
compiler warnings on OS X 64bit
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
0.11.x
Other Mac OS
: Normal normal
: 0.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-21 18:00 UTC by Matej Knopp
Modified: 2012-02-19 12:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixes the build (4.56 KB, patch)
2011-11-21 18:00 UTC, Matej Knopp
committed Details | Review
another once (1.27 KB, patch)
2012-01-26 11:43 UTC, Matej Knopp
committed Details | Review

Description Matej Knopp 2011-11-21 18:00:51 UTC
Created attachment 201838 [details] [review]
Fixes the build

Build fails because of warnings
Comment 1 Tim-Philipp Müller 2011-11-22 00:54:36 UTC
I've pushed the bits that Wim hasn't fixed yet:

 commit 6ea74a05722586af5f83429e5255e557282a103c
 Author: Matej Knopp <matej.knopp@gmail.com>
 Date:   Mon Nov 21 18:56:19 2011 +0100

    Fix printf format compiler warnings on OSX/64bit
    
    https://bugzilla.gnome.org/show_bug.cgi?id=664491

but not the GstAdapter changes, which don't look quite right. What are the exact warnings you get where because of those?
Comment 2 Matej Knopp 2011-11-22 00:57:48 UTC
These are the warnings I get

gstadapter.h:82: warning: type qualifiers ignored on function return type
gstadapter.c:412: warning: type qualifiers ignored on function return type

The warning vanishes when I change const gpointer to gconstpointer. What is wrong with gconstpointer?
Comment 3 Matej Knopp 2011-11-22 01:27:58 UTC
The above warning ( type qualifiers ignored on function return type ) 
is caused by the following line
const gpointer gst_adapter_map (GstAdapter * adapter, gsize size)

according to [1] "const gpointer" is not the same as gconstpointer or const void *.

[1] http://old.nabble.com/-Bug-c-35928---New:-type-qualifiers-ignored-on-function-return-type-td16670737.html
Comment 4 Tim-Philipp Müller 2011-11-22 12:43:36 UTC
I read the diff the wrong way around, sorry ('t was late).

 commit f33b1397d390c625d21eebbf39c03ffacce1b085
 Author: Matej Knopp <matej.knopp@gmail.com>
 Date:   Mon Nov 21 18:56:19 2011 +0100

    adapter: fix return type of _map() to gconstpointer
    
    Fixes compiler warnings on OSX:
    gstadapter.h:82: warning: type qualifiers ignored on function return type
    gstadapter.c:412: warning: type qualifiers ignored on function return type
    
    const gpointer is not the same as gconstpointer or const void *.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=664491
Comment 5 Matej Knopp 2012-01-26 11:43:56 UTC
Created attachment 206168 [details] [review]
another once
Comment 6 Tim-Philipp Müller 2012-02-19 12:48:15 UTC
commit 7b16febb0d8a7f218dc91065fdbf51fcd268f9c5
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Thu Jan 26 03:02:48 2012 -0500

    nettimepacket: fix printf format warning in debug message
    
    https://bugzilla.gnome.org/show_bug.cgi?id=664491