Fix printf format compiler warnings on OSX/64bit

https://bugzilla.gnome.org/show_bug.cgi?id=664491