libs/gst/base/gstbasesrc.c
@@ -3192,7 +3192,7 @@ gst_base_src_activate_mode (GstPad * pad, GstObject * parent,
       res = gst_base_src_activate_push (pad, parent, active);
       break;
     default:
-      GST_LOG_OBJECT (pad, "unknown activation mode %d");
+      GST_LOG_OBJECT (pad, "unknown activation mode %d", mode);
       res = FALSE;
       break;
   }
